--- a/TheCrew2CompanionApp/TheCrew2CompanionApp/Views/MenuPage.xaml
+++ b/TheCrew2CompanionApp/TheCrew2CompanionApp/Views/MenuPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TheCrew2CompanionApp.Views.MenuPage"
              Title="Menu">
-    <StackLayout VerticalOptions="FillAndExpand">
+    <StackLayout VerticalOptions="FillAndExpand"
+                 BackgroundColor="#202020">
         <ListView x:Name="ListViewMenu"
                     HasUnevenRows="True">
             <ListView.ItemTemplate>
