--- a/TheCrew2CompanionApp/TheCrew2CompanionApp/Views/VehicleDetailsPage.xaml
+++ b/TheCrew2CompanionApp/TheCrew2CompanionApp/Views/VehicleDetailsPage.xaml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:TheCrew2CompanionApp.Renderers"
              x:Class="TheCrew2CompanionApp.Views.VehicleDetailsPage">
     <ContentPage.Content>
-        <Grid BackgroundColor="Black"
+        <Grid BackgroundColor="#202020"
               Padding="5, 5, 5, 5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -53,9 +54,9 @@
                    TextColor="White"
                    HorizontalTextAlignment="Start"
                    VerticalTextAlignment="Center" />
-            <Switch Grid.Row="3"
-                    Grid.Column="1"
-                    IsToggled="{Binding HasBeenPurchased}" />
+            <local:CustomSwitch x:Name="HasBeenPurchasedSwitch"
+                    Grid.Row="3"
+                    Grid.Column="1" />
 
             <BoxView Grid.Row="4"
                      Grid.Column="0"
