--- a/TheCrew2CompanionApp/TheCrew2CompanionApp/Views/AboutPage.xaml
+++ b/TheCrew2CompanionApp/TheCrew2CompanionApp/Views/AboutPage.xaml
@@ -17,8 +17,8 @@
             <Color x:Key="LightTextColor">#999999</Color>
         </ResourceDictionary>
     </ContentPage.Resources>
-    
-    <Grid>
+
+    <Grid BackgroundColor="#202020">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
