--- a/TheCrew2CompanionApp/TheCrew2CompanionApp/Views/MenuPage.xaml
+++ b/TheCrew2CompanionApp/TheCrew2CompanionApp/Views/MenuPage.xaml
@@ -11,7 +11,9 @@
                 <DataTemplate>
                     <ViewCell>
                         <Grid Padding="10">
-                            <Label Text="{Binding Title}" FontSize="20"/>
+                            <Label Text="{Binding Title}"
+                                   FontSize="20"
+                                   TextColor="White" />
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
